@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Fix searching shares for duplicates.
 * [mjr] Fix calling decode_attribute hook when exporting to ActiveSync (kd@tu-cottbus.de, Bug #11678).
 * [jan] Update Slovak translation (Jozef Sudolský &lt;jozef.sudolsky@elbia.sk&gt;).
  </notes>
@@ -1520,6 +1521,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Fix searching shares for duplicates.
 * [mjr] Fix calling decode_attribute hook when exporting to ActiveSync (kd@tu-cottbus.de, Bug #11678).
 * [jan] Update Slovak translation (Jozef Sudolský &lt;jozef.sudolsky@elbia.sk&gt;).
    </notes>
